--- a/package.json
+++ b/package.json
@@ -1,45 +1,26 @@
 {
-  "name": "nodejs-express-mongodb-starter-project",
+  "name": "node-js-jwt-auth",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Node.js Demo for JWT Authentication",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "nodejs",
+    "node.js",
+    "jwt",
+    "authentication",
     "express",
-    "mongodb",
-    "starter-api",
-    "starter-project",
-    "mongodb-starter-project",
-    "express-mongodb-starter-project",
-    "express-api",
-    "nodejs-rest-api",
-    "api-güvenligi",
-    "rest-api",
-    "api-securty",
-    "base-api",
-    "nodejs-base-api"
+    "mysql"
   ],
-  "author": "",
+  "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.2.0",
-    "joi": "^17.6.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.40",
-    "mongoose": "^8.3.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.8.0",
-    "nodemon": "^3.1.0"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.32.1"
   }
 }
